fix fixed nav spacing

--- a/packages/docs-app/src/components/TopNav/top-nav.scss
+++ b/packages/docs-app/src/components/TopNav/top-nav.scss
@@ -4,6 +4,7 @@
   background: white;
   z-index: 9999;
   width: 100%;
+  border-bottom: 1px solid $ray-color-gray-10;
 }
 
 .top-nav__inner {
