--- a/packages/docs-app/src/styles/_page.scss
+++ b/packages/docs-app/src/styles/_page.scss
@@ -4,6 +4,10 @@
 
 body {
   background: $ray-color-white;
+
+  .with-fixed-nav & {
+    padding-top: $top-nav-height;
+  }
 }
 
 //---------------------------------------
